# mytrim

./: .gitignore  .travis.yml  .travis_bootstrap.sh  .travis_clang-format_test.sh  CMakeLists.txt  DOCUMENTATION.md  LICENSE  README.md  config.h.cmake  element.C  element.cc  element.h  functions.h  invert.C  invert.cc  invert.h  ion.C  ion.cc  ion.h  material.C  material.cc  material.h  mytrim_ODS.C  mytrim_ODS.cc  mytrim_bobmsq.C  mytrim_bobmsq.cc  mytrim_clusters.C  mytrim_clusters.cc  mytrim_clusters.cpp  mytrim_dynamic.C  mytrim_dynamic.cc  mytrim_layers.C  mytrim_layers.cc  mytrim_moose_verification.C  mytrim_solid.C  mytrim_solid.cc  mytrim_solid.cpp  mytrim_solid2.C  mytrim_solid2.cc  mytrim_uo2.C  (+40 more)
analysis/: SRIMStopping.py  SRIMVacEnergyCount.py  animatehistory.pl.bak  srim_collision.py
apps/: main.C  mytrim_ODS.C  mytrim_bobmsq.C  mytrim_clusters.C  mytrim_distance.C  mytrim_dynamic.C  mytrim_json.C  mytrim_layers.C  mytrim_moose_verification.C  mytrim_nrt.C  mytrim_solid.C  mytrim_solid2.C  mytrim_uo2.C  mytrim_wire.C  mytrim_wire2.C  run_main.C  run_stopping.C  runmytrim.C  runstopping.C
apps/include/: ThreadedTrimBase.h  TrimRange.h  TrimVacCount.h  TrimVacEnergyCount.h
apps/src/: TrimRange.C  TrimVacCount.C  TrimVacEnergyCount.C
cmake/Modules/: FindJsonCpp.cmake
data/: SCOEF.95A  SCOEF.95B
inputs/: README  example_layers.in  samplelayers_ag_on_cu.in  samplelayers_ag_on_si.in  samplelayers_cu_on_al.in  samplelayers_sio_on_si.in  samplelayers_zro2_multilayer.in
mybuild/: histo_dpa.pl
performance/: cbrt.C  pow4.C
shim/: cxx11random.C  cxx11random.h  point.C  point.h  pow.h
tests/: csv_diff.sh  run_tests.sh
tests/json/: README.md  cu_on_cu.json  xe_on_uo2.json  xe_on_uo2_scale10.json
tests/uo2/: test.sh
tests/uo2/gold/: out.Erec  out.clcoor  out.dist
validation/c_on_w/: c_on_w.json  input.json
validation/cu_on_cu/: cu_on_cu.json
validation/h_on_fe/: input.json
validation/he_on_fe/: input.json
validation/vacancy_count/: cu_on_cu_range.json  cu_on_cu_vac.json  make_plot.py  si_on_c_range.json  si_on_c_vac.json  xe_on_u_range.json  xe_on_u_vac.json
